Update and rename Grade 11.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="file:///home/chronos/u-ff813e060e527b4b8183c8ace4c1a2fd236ae28c/MyFiles/Downloads/images/BIOHS.jpg">
-    <link rel="stylesheet" href="style.css">
+    <title>BIOHS SPHERE</title>
+    <link rel="icon" href="BIOHS.jpg"/>
+    <link rel="stylesheet" href="style.css"/>
+    <link href="./pointer.css" rel="stylesheet">
+    <script src="./pointer.js"></script>
 </head>
 
 <body>
   <section class="header">
       <nav>
-          <img src="file:///home/chronos/u-ff813e060e527b4b8183c8ace4c1a2fd236ae28c/MyFiles/Downloads/images/Logo.png">
+          <img src="Logo.png">
           <div class="nav-links" id="navLinks">
               <ul>
-                  <li><a href="">Home</a></li>
-                  <li><a href="">About</a></li>
-                  <li><a href="">Grade 11</a></li>
-                  <li><a href="">Grade 12</a></li>
+                  <li><a href="https://biohs.github.io/Home">Home</a></li>
+                  <li><a href="https://biohs.github.io/About">About</a></li>
+                  <li><a href="https://biohs.github.io/G11">Grade 11</a></li>
+                  <li><a href="https://biohs.github.io/G12">Grade 12</a></li>
               </ul>
           </div>
       </nav>
 
       <div class="row">
         <div class="column">
-          <a href=""> <img src="file:///home/chronos/u-ff813e060e527b4b8183c8ace4c1a2fd236ae28c/MyFiles/Downloads/Bio.jpg"; style="width:100%"></a>
+          <a href=""> <img src="Bio.jpg"; style="width:100%"></a>
           <h3 class="txto"> Advanced </h3>
         </div>
         <div class="column">
-          <a href=""> <img src="file:///home/chronos/u-ff813e060e527b4b8183c8ace4c1a2fd236ae28c/MyFiles/Downloads/HS.jpg"; style="width:100%"></a>
+          <a href=""> <img src="HS.jpg"; style="width:100%"></a>
           <h3 class="txto"> General & Advanced </h3>
         </div>
       </div>
@@ -38,7 +40,7 @@
     <footer>
         <div class="row">
             <div class="col">
-                <img src="file:///home/chronos/u-ff813e060e527b4b8183c8ace4c1a2fd236ae28c/MyFiles/Downloads/images/Logo.png" height="45" class="logo"><br><br><br><br>
+                <img src="Logo.png" height="45" class="logo"><br><br><br><br>
             </div>
             <div class="col">
                 <h3> Contact Us </h3>
