--- a/index.html
+++ b/index.html
@@ -21,11 +21,17 @@
               </ul>
           </div>
       </nav>
-
+      <img src="HS.jpg"; style="width:100%";>
+      <h3 class="txto"> General & Advanced </h3>
       <div class="row">
         <div class="column">
-          <a href=""> <img src="HS.jpg"; style="width:100%"></a>
-          <h3 class="txto"> General & Advanced </h3>
+          <a href="https://biohs.github.io/G11T3-HS"> <img src="G11_T1_Hs"; style="width:100%"></a>
+        </div>
+        <div class="column">
+          <a href="https://biohs.github.io/G11T2-HS"> <img src="G11_T2_Hs"; style="width:100%"></a>
+        </div>
+        <div class="column">
+          <a href="https://biohs.github.io/G11T3-HS"> <img src="G11_T3_Hs"; style="width:100%"></a>
         </div>
       </div>
 </body>
