--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
       <h3 class="txto"> General & Advanced </h3>
       <div class="row">
         <div class="column">
-          <a href="https://biohs.github.io/G11T3-HS"> <img src="G11_T1_Hs"; style="width:100%"></a>
+          <a href="https://biohs.github.io/G11T3-HS"> <img src="G11_T1_Hs.jpg"; style="width:100%"></a>
         </div>
         <div class="column">
-          <a href="https://biohs.github.io/G11T2-HS"> <img src="G11_T2_Hs"; style="width:100%"></a>
+          <a href="https://biohs.github.io/G11T2-HS"> <img src="G11_T2_Hs.jpg"; style="width:100%"></a>
         </div>
         <div class="column">
-          <a href="https://biohs.github.io/G11T3-HS"> <img src="G11_T3_Hs"; style="width:100%"></a>
+          <a href="https://biohs.github.io/G11T3-HS"> <img src="G11_T3_Hs.jpg"; style="width:100%"></a>
         </div>
       </div>
 </body>
